// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitVb > kitchen sink contract > Dispatcher.Generated.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System

Namespace Global.WebView2Bridge.Contract

    Partial Public Class Dispatcher

        ''' <summary>契約に含まれる全メソッド名</summary>
        Public Shared ReadOnly MethodNames As String() = {"customers.list", "customers.save", "system.ping"}

        ''' <summary>"customers.*" の実装を登録する</summary>
        Public Sub Register(api As ICustomersApi)
            If api Is Nothing Then Throw New ArgumentNullException(NameOf(api))
            RegisterHandler(Of CustomersListRequest, CustomersListResponse)("customers.list", AddressOf api.List)
            RegisterHandler(Of CustomersSaveRequest, CustomersSaveResponse)("customers.save", AddressOf api.Save)
        End Sub

        ''' <summary>"system.*" の実装を登録する</summary>
        Public Sub Register(api As ISystemApi)
            If api Is Nothing Then Throw New ArgumentNullException(NameOf(api))
            RegisterHandler(Of SystemPingRequest, SystemPingResponse)("system.ping", AddressOf api.Ping)
        End Sub
    End Class

End Namespace
"
`;

exports[`emitVb > kitchen sink contract > Dto.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Collections.Generic
Imports Newtonsoft.Json
Imports Newtonsoft.Json.Linq

Namespace Global.WebView2Bridge.Contract

    Public Class Customer
        <JsonProperty("id")>
        Public Property Id As Integer

        <JsonProperty("name")>
        Public Property Name As String

        <JsonProperty("status")>
        Public Property Status As String

        <JsonProperty("address", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property Address As Address

        <JsonProperty("tags")>
        Public Property Tags As List(Of String) = New List(Of String)()

        <JsonProperty("scores", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property Scores As List(Of Double)

        <JsonProperty("attributes")>
        Public Property Attributes As Dictionary(Of String, String) = New Dictionary(Of String, String)()

        <JsonProperty("extra")>
        Public Property Extra As JToken

        ''' <summary>VB 予約語の回避を確認する</summary>
        <JsonProperty("date")>
        Public Property [Date] As String

        <JsonProperty("end", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property [End] As Nullable(Of Boolean)

        <JsonProperty("snake_case_name")>
        Public Property SnakeCaseName As String

        <JsonProperty("nullableInt")>
        Public Property NullableInt As Nullable(Of Integer)

        <JsonProperty("optionalNullableInt", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property OptionalNullableInt As Nullable(Of Integer)

        <JsonProperty("kind")>
        Public Property Kind As String

        <JsonProperty("children")>
        Public Property Children As List(Of CustomerChild) = New List(Of CustomerChild)()

        <JsonProperty("meta", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property Meta As CustomerMeta
    End Class

    ''' <remarks>string enum. 値は文字列のまま往復する（VB の Enum にはしない）</remarks>
    Public NotInheritable Class Status
        Private Sub New()
        End Sub

        Public Const Open As String = "open"
        Public Const InProgress As String = "in-progress"
        Public Const Closed As String = "closed"
        Public Const _2nd As String = "2nd"

        Public Shared ReadOnly Values As String() = {"open", "in-progress", "closed", "2nd"}
    End Class

    Public Class Address
        <JsonProperty("line1")>
        Public Property Line1 As String

        <JsonProperty("line2", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property Line2 As String

        <JsonProperty("zip")>
        Public Property Zip As String
    End Class

    ''' <remarks>string enum. 値は文字列のまま往復する（VB の Enum にはしない）</remarks>
    Public NotInheritable Class CustomerKind
        Private Sub New()
        End Sub

        Public Const A As String = "a"
        Public Const B As String = "b"

        Public Shared ReadOnly Values As String() = {"a", "b"}
    End Class

    Public Class CustomerChild
        <JsonProperty("childId")>
        Public Property ChildId As String

        <JsonProperty("weight", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property Weight As Nullable(Of Double)
    End Class

    Public Class CustomerMeta
        <JsonProperty("createdBy")>
        Public Property CreatedBy As String
    End Class

    ''' <summary>顧客一覧を取得する</summary>
    Public Class CustomersListRequest
        <JsonProperty("page", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property Page As Nullable(Of Integer)
    End Class

    Public Class CustomersListResponse
        <JsonProperty("items")>
        Public Property Items As List(Of Customer) = New List(Of Customer)()

        <JsonProperty("total")>
        Public Property Total As Integer
    End Class

    Public Class CustomersSaveRequest
        <JsonProperty("customer")>
        Public Property Customer As Customer
    End Class

    Public Class CustomersSaveResponse
        <JsonProperty("ok")>
        Public Property Ok As Boolean
    End Class

    Public Class SystemPingRequest
    End Class

    Public Class SystemPingResponse
        <JsonProperty("time")>
        Public Property Time As String
    End Class

    Public Class CustomerChangedEvent
        <JsonProperty("id")>
        Public Property Id As Integer

        <JsonProperty("status")>
        Public Property Status As String
    End Class

    Public Class LogEvent
        <JsonProperty("level")>
        Public Property Level As String

        <JsonProperty("text")>
        Public Property Text As String
    End Class

    ''' <remarks>string enum. 値は文字列のまま往復する（VB の Enum にはしない）</remarks>
    Public NotInheritable Class LogEventLevel
        Private Sub New()
        End Sub

        Public Const Info As String = "info"
        Public Const Warn As String = "warn"

        Public Shared ReadOnly Values As String() = {"info", "warn"}
    End Class

End Namespace
"
`;

exports[`emitVb > kitchen sink contract > Events.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System

Namespace Global.WebView2Bridge.Contract

    ''' <summary>Host → Web の型付きイベント発行ヘルパ。内部で IBridgeEmitter.Emit("event.&lt;name&gt;", payload) を呼ぶ</summary>
    Public Class BridgeEvents
        Private ReadOnly _emitter As IBridgeEmitter

        Public Sub New(emitter As IBridgeEmitter)
            If emitter Is Nothing Then Throw New ArgumentNullException(NameOf(emitter))
            _emitter = emitter
        End Sub

        ''' <summary>契約に含まれる全イベント名</summary>
        Public Shared ReadOnly EventNames As String() = {"event.customerChanged", "event.log"}

        ''' <summary>JSON-RPC notification "event.customerChanged"</summary>
        Public Sub CustomerChanged(payload As CustomerChangedEvent)
            _emitter.Emit("event.customerChanged", payload)
        End Sub

        ''' <summary>JSON-RPC notification "event.log"</summary>
        Public Sub Log(payload As LogEvent)
            _emitter.Emit("event.log", payload)
        End Sub
    End Class

End Namespace
"
`;

exports[`emitVb > kitchen sink contract > Interfaces.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Threading.Tasks

Namespace Global.WebView2Bridge.Contract

    ''' <summary>"customers.*" メソッドの実装。人間が Implements して WebView2Bridge.Impl に置く</summary>
    Public Interface ICustomersApi
        ''' <summary>顧客一覧を取得する</summary>
        Function List(req As CustomersListRequest) As Task(Of CustomersListResponse)

        ''' <summary>JSON-RPC method "customers.save"</summary>
        Function Save(req As CustomersSaveRequest) As Task(Of CustomersSaveResponse)
    End Interface

    ''' <summary>"system.*" メソッドの実装。人間が Implements して WebView2Bridge.Impl に置く</summary>
    Public Interface ISystemApi
        ''' <summary>JSON-RPC method "system.ping"</summary>
        Function Ping(req As SystemPingRequest) As Task(Of SystemPingResponse)
    End Interface

End Namespace
"
`;

exports[`emitVb > sample contract > Dispatcher.Generated.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System

Namespace Global.WebView2Bridge.Contract

    Partial Public Class Dispatcher

        ''' <summary>契約に含まれる全メソッド名</summary>
        Public Shared ReadOnly MethodNames As String() = {"parts.search"}

        ''' <summary>"parts.*" の実装を登録する</summary>
        Public Sub Register(api As IPartsApi)
            If api Is Nothing Then Throw New ArgumentNullException(NameOf(api))
            RegisterHandler(Of PartsSearchRequest, PartsSearchResponse)("parts.search", AddressOf api.Search)
        End Sub
    End Class

End Namespace
"
`;

exports[`emitVb > sample contract > Dto.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Collections.Generic
Imports Newtonsoft.Json
Imports Newtonsoft.Json.Linq

Namespace Global.WebView2Bridge.Contract

    Public Class Part
        <JsonProperty("partNo")>
        Public Property PartNo As String

        <JsonProperty("name")>
        Public Property Name As String

        <JsonProperty("qty")>
        Public Property Qty As Integer

        ''' <summary>ISO 8601</summary>
        <JsonProperty("updatedAt")>
        Public Property UpdatedAt As String
    End Class

    Public Class PartsSearchRequest
        <JsonProperty("keyword")>
        Public Property Keyword As String

        <JsonProperty("limit", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property Limit As Nullable(Of Integer)
    End Class

    Public Class PartsSearchResponse
        <JsonProperty("items")>
        Public Property Items As List(Of Part) = New List(Of Part)()
    End Class

    Public Class ProgressEvent
        <JsonProperty("percent")>
        Public Property Percent As Double

        <JsonProperty("message", NullValueHandling:=NullValueHandling.Ignore)>
        Public Property Message As String
    End Class

End Namespace
"
`;

exports[`emitVb > sample contract > Events.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System

Namespace Global.WebView2Bridge.Contract

    ''' <summary>Host → Web の型付きイベント発行ヘルパ。内部で IBridgeEmitter.Emit("event.&lt;name&gt;", payload) を呼ぶ</summary>
    Public Class BridgeEvents
        Private ReadOnly _emitter As IBridgeEmitter

        Public Sub New(emitter As IBridgeEmitter)
            If emitter Is Nothing Then Throw New ArgumentNullException(NameOf(emitter))
            _emitter = emitter
        End Sub

        ''' <summary>契約に含まれる全イベント名</summary>
        Public Shared ReadOnly EventNames As String() = {"event.progress"}

        ''' <summary>JSON-RPC notification "event.progress"</summary>
        Public Sub Progress(payload As ProgressEvent)
            _emitter.Emit("event.progress", payload)
        End Sub
    End Class

End Namespace
"
`;

exports[`emitVb > sample contract > Interfaces.vb 1`] = `
"' <auto-generated>
'     This code was generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json.
'     DO NOT EDIT. Changes will be lost when \`pnpm gen\` runs.
' </auto-generated>
Option Strict On
Option Explicit On
Option Infer On

Imports System
Imports System.Threading.Tasks

Namespace Global.WebView2Bridge.Contract

    ''' <summary>"parts.*" メソッドの実装。人間が Implements して WebView2Bridge.Impl に置く</summary>
    Public Interface IPartsApi
        ''' <summary>JSON-RPC method "parts.search"</summary>
        Function Search(req As PartsSearchRequest) As Task(Of PartsSearchResponse)
    End Interface

End Namespace
"
`;
